--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^3.0.0",
-    "html2canvas": "^0.5.0-beta4"
+    "html2canvas": "^1.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
